Day 4 for html is added

--- a/HTML/intor.html
+++ b/HTML/intor.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Intro to HTML</title>
-  </head>
+<head>
+  <title>Table</title>
+</head>
+<body>
+    <form >
+      <h3>Form</h3>
+      <!--Name-->
+     <div>
+      <label >Name:</label>
+      <input type="text" >
+     </div>
+      <!--Package-->
+      <div>
+        <label>Option</label>
 
-  <body>
-    <header>
-        <section>
+       <select name="Package">
+        <option value="Apple">Apple</option>
+        <option value="Banana">Banana</option>
+       </select>
+      </div>
+      
+        <div>
+          <button>Submit</button>
+        </div>
 
-        </section>
-        <section>
-
-        </section>
-        <section>
-            
-        </section>
-    </header>
-
-    <main></main>
-
-    <footer></footer>
-  </body>
+    </form>
+</body>
 </html>
